gap fix

--- a/LoginPublic/css/pocetna.css
+++ b/LoginPublic/css/pocetna.css
@@ -1,9 +1,8 @@
 #naslov {
     text-align: left;
     background-image: linear-gradient(gray, lightgray);
-    padding: 5px;
+    padding: -5px -10px -10px;
     overflow: hidden;
-    top: 0;
     margin-top: -7px;
     font-family: "Agency FB";
 }
@@ -11,6 +10,7 @@
 body {
     background-image: url("../slike/pozadina.jpg");
     background-size: cover;
+    margin: 0px;
 }
 
 .pocetna {
@@ -18,6 +18,7 @@ body {
     margin-right: 270px;
     margin-top: -55px;
 }
+
 
 .button {
     color: black;
